[FIX] Fab z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,4 +26,5 @@
 
 .picsily-fab{
 	text-align: center;
+	z-index: 1030;
 }
